# parallelneuralnetwork

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/neural_network/: NeuralNetwork.cpp  backPropagation.cpp  feedForward.cpp
